feat: full zero-install Livewire nREPL via agent uber-jar
Context discovery (no --add-opens at JVM startup needed):
- openJavaLang(): uses Instrumentation.redefineModule() to open java.base/java.lang
  at runtime, enabling shutdown hook field access without startup flags
- Strategy 2 (shutdown hook): fix getThreadTarget() for Java 21+ — target Runnable
  moved from Thread.target to Thread.holder.task (Project Loom refactor)
- Strategy 3 (Tomcat container thread): walk container-N Thread subclass
  (TomcatWebServer$N) → this$0 → TomcatWebServer → Tomcat → Host →
  TomcatEmbeddedContext → ServletContext → ROOT WebApplicationContext attribute.
  No --add-opens needed; all Spring Boot / Tomcat classes are in unnamed modules
  where setAccessible() is unrestricted.
  Discovered interactively via exploration nREPL + sun.misc.Unsafe to bypass
  Thread.holder access restriction for the REPL session.

nREPL bootstrap:
- deps.edn: add net.brdloush/livewire 0.12.0-SNAPSHOT + Clojure 1.12.0 + nREPL 1.3.1
  Spring/Hibernate are :scope provided in livewire's pom — NOT bundled
- build.clj: b/uber produces a ~5MB self-contained agent jar
- startLivewireNrepl(): creates child URLClassLoader (parent=appCl), loads bundled
  Clojure + Livewire, calls boot/start!(ctx, port) — full lw/q/trace/hq aliases
- startExplorationNrepl(): fallback bare nREPL when context discovery fails
- Remove ensureNrepl() (replaced by startLivewireNrepl)

Verified: Spring Boot 4.0.1 app with NO Livewire in pom.xml gets full Livewire
nREPL on port 7888, lw/q/trace/hq aliases active, @Query watcher running.
Note: trace-sql query count is 0 (StatementInspector not configured in target app).

🤖 Generated with [eca](https://eca.dev)

Co-Authored-By: eca-agent <git@eca.dev>